fix horizontal scroll

--- a/custom_css/style.css
+++ b/custom_css/style.css
@@ -88,3 +88,10 @@
 #scroll img:hover {
   opacity: 0.8;
 }
+
+hr{
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
